--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "bootstrap": "^4.4.1",
     "bootstrap-social": "^5.1.1",
     "expo": "~37.0.3",
+    "formik": "^2.1.4",
+    "jquery": "^3.5.1",
     "navigation": "^5.2.0",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "react": "^16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
@@ -21,6 +25,7 @@
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.8",
     "react-navigation-drawer": "^2.4.13",
