--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "formik": "^2.1.4",
     "jquery": "^3.5.1",
     "navigation": "^5.2.0",
+    "node": "^14.4.0",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "react": "^16.9.0",
